# gecs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: gecs.h  hashmap.h  sparse_set.h
src/: gecs.c
test/: main.c
